# libftp

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
client/: Cargo.toml
client/src/: cli.rs  client.rs  lib.rs  main.rs
ftp/: Cargo.toml
ftp/src/: command.rs  lib.rs
ftp/src/parser/: command.rs
ftp/src/serializer/: mod.rs  reply.rs  serializeable.rs  serializer.rs
proxy/: Cargo.toml
proxy/src/: lib.rs  main.rs  proxy.rs
src/: lib.rs  main.rs  proxy.rs  reply.rs
src/ftp/: command.rs  mod.rs  reply.rs
src/ftp/parser/: command.rs  common.rs  mod.rs  reply.rs
src/ftp/serializer/: command.rs  reply.rs  serializeable.rs
src/parser/: command.rs  common.rs  reply.rs
src/serializer/: command.rs  serializeable.rs
