[package]
name = "libftp"
version = "0.1.0"
edition = "2021"
description = "A Rust crate for working with the FTP protocol."
repository = "https://github.com/benpbo/libftp"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
