[package]
name = "libftp-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Ben Prize Bar-On <prizeben@gmail.com>"]
description = "A ftp proxy written in rust."
repository = "https://github.com/benpbo/libftp"
license = "MIT OR Apache-2.0"
keywords = ["ftp", "proxy"]
categories = ["network-programming", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libftp = { path = "../ftp" }
nom = "7.1"
